# controllers/userController.js
@@ -10,42 +10,6 @@ const express = require('express');
 const { ObjectId } = require('mongodb'); // Import ObjectId to handle MongoDB ObjectIds
 const database = require("../database/users"); // Import the database connection
 
-//using mongoose
-// const database = require('../models')
-// const User = database.users;
-
-
-
-
-
-
-
-//WEEK 1 getting all , individual , post, put, delete using the mongodb connection to the database.
-
-
-/**
- * Get all users.
- * 
- * @param {Object} req - Express request object
- * @param {Object} res - Express response object
- */
-const getAll = async (req, res) => {
-    try {
-        const result = await database.getDatabase().db().collection('users').find(); // Query the database for all users
-        result.toArray().then((users) => {
-            res.setHeader('Content-Type', "application/json");
-            res.status(200).json(users); // Send all users found
-        }).catch((err) => {
-            console.log("Error with retrieving users: ", err);
-            res.status(500).send("Internal Server Error");
-        });
-    } catch (error) {
-        console.log("Error: ", error);
-        res.status(500).send("Internal Server Error");
-    }
-};
-
-
 /**
  * Get a single user by ID.
  * 
@@ -69,7 +33,27 @@ const getSingle = async (req, res) => {
     }
 };
 
-
+/**
+ * Get all users.
+ * 
+ * @param {Object} req - Express request object
+ * @param {Object} res - Express response object
+ */
+const getAll = async (req, res) => {
+    try {
+        const result = await database.getDatabase().db().collection('users').find(); // Query the database for all users
+        result.toArray().then((users) => {
+            res.setHeader('Content-Type', "application/json");
+            res.status(200).json(users); // Send all users found
+        }).catch((err) => {
+            console.log("Error with retrieving users: ", err);
+            res.status(500).send("Internal Server Error");
+        });
+    } catch (error) {
+        console.log("Error: ", error);
+        res.status(500).send("Internal Server Error");
+    }
+};
 
 /**
  * Create a new user.
@@ -79,14 +63,8 @@ const getSingle = async (req, res) => {
  */
 const createUser = async (req, res) => {
     try {
-        const user = { 
-            firstName: req.body.firstName, 
-            lastName: req.body.lastName, 
-            email: req.body.email, 
-            favoriteColor: req.body.favoriteColor, 
-            birthday: req.body.birthday 
-        };  // Destructure the user data from the request body
-        const response = await database.getDatabase().db().collection('users').insertOne(user)
+        const { firstName, lastName, email, favoriteColor, birthday } = req.body; // Destructure the user data from the request body
+        await database.getDatabase().db().collection('users').insertOne(req.body)
             .then((result) => {
                 res.setHeader('Content-Type', "application/json");
                 res.status(201).send(result); // Send the result of the insertion
@@ -109,14 +87,7 @@ const createUser = async (req, res) => {
 const updateUser = async (req, res) => {
     try {
         const userId = new ObjectId(req.params.id); // Get the user ID from the request parameters
-        const user = {
-            firstName: req.body.firstName, 
-            lastName: req.body.lastName, 
-            email: req.body.email, 
-            favoriteColor: req.body.favoriteColor, 
-            birthday: req.body.birthday 
-        };
-        const response = await database.getDatabase().db().collection('users').updateOne({ _id: userId }, { $set: user })
+        await database.getDatabase().db().collection('users').updateOne({ _id: userId }, { $set: req.body })
             .then((result) => {
                 res.setHeader('Content-Type', "application/json");
                 res.status(200).send(result); // Send the result of the update
@@ -153,36 +124,6 @@ const deleteUser = async (req, res) => {
     }
 };
 
-
-
-// //WEEK 2 use the mongoose to connect to the database
-// exports.getAll = (req, res) => {
-//     User.find().then((users) => {
-//         res.setHeader('Content-Type', "application/json");
-//         res.status(200).json(users); // Send all users found
-//     }).catch((err) => {
-//         console.log("Error with retrieving users: ", err);
-//         res.status(500).send("Internal Server Error");
-//     });
-// };
-
-// exports.getSingle = async (req, res) => {
-// try {
-//     const user_id = new ObjectId(req.params.id); // Get the user ID from the request parameters
-//     const result = await database.getDatabase().db().collection('users').find({ _id: user_id }); // Query the database
-//     result.toArray().then((users) => {
-//         res.setHeader('Content-Type', "application/json");
-//         res.status(200).json(users[0]); // Send the first user found
-//     }).catch((err) => {
-//         console.log("Error with retrieving user: ", err);
-//         res.status(500).send("Internal Server Error");
-//     });
-// } catch (error) {
-//     console.log("Error: ", error);
-//     res.status(500).send("Internal Server Error");
-// }
-// };
-
 // Export the route handlers to be used in other parts of the application
 module.exports = {
     getSingle,
@@ -191,7 +132,3 @@ module.exports = {
     updateUser,
     deleteUser
 };
-
-
-
-
